# votechain

./: README.md
client/: README.md  nginx-selfsigned.crt  nginx-selfsigned.key  package.json
client/public/: index.html
client/src/: App.js  Navbar.js  Substrate.js  index.js
client/src/votechain/: AddCandidates.js  Blocks.js  CloseElection.js  CreateElection.js  ElectionResult.js  NavbarMenuItens.js  Vote.js  VotechainContext.js  index.js
docs/comandos/: accounts.txt  node01 comandos.txt  node02 comandos.txt  node03 comandos.txt  substrate comandos.txt
votechain/: Cargo.toml  chainSpecLocal.json  customSpec.json  votechain-clear.sh  votechain-dev.sh  votechain-genesis.sh  votechain.sh
votechain/bench/: Cargo.toml
votechain/cli/: Cargo.toml
votechain/cli/src/: chain_spec.rs
votechain/executor/: Cargo.toml
votechain/inspect/: Cargo.toml
votechain/node/: Cargo.toml
votechain/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
votechain/pallets/votechain/: Cargo.toml
votechain/pallets/votechain/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
votechain/primitives/: Cargo.toml
votechain/rpc/: Cargo.toml
votechain/runtime/: Cargo.toml
votechain/runtime/src/: constants.rs  impls.rs  lib.rs
votechain/testing/: Cargo.toml
